Migrate to react-babylonjs. Add cubemap texture

--- a/src/components/HeadsUpDisplay.module.css
+++ b/src/components/HeadsUpDisplay.module.css
@@ -10,7 +10,7 @@
     flex: 1 1 auto;
 }
 
-header, footer {
+.header, .footer {
     flex: 0 0 auto;
     display: flex;
     justify-content: space-between;
