--- a/src/components/3D/MainScene.module.css
+++ b/src/components/3D/MainScene.module.css
@@ -5,5 +5,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+    z-index: 0;
+}
+
+.scene > canvas {
+    width: 100%;
+    height: 100%;
 }
