--- a/src/components/3D/MainScene.module.css
+++ b/src/components/3D/MainScene.module.css
@@ -1,4 +1,10 @@
 .scene {
+    display: flex;
+    width: 100%;
+    min-height: 100vh;
+}
+
+.scene > canvas {
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -6,9 +12,4 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 0;
-}
-
-.scene > canvas {
-    width: 100%;
-    height: 100%;
 }
