--- a/src/components/3D/MainScene.module.css
+++ b/src/components/3D/MainScene.module.css
@@ -1,7 +1,10 @@
 .scene {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
-    width: 100%;
-    min-height: 100vh;
 }
 
 .scene > canvas {
@@ -11,5 +14,5 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 0;
+    z-index: 1;
 }
