--- a/src/components/UI/Background.module.css
+++ b/src/components/UI/Background.module.css
@@ -1,15 +1,23 @@
-.background {
-    /* background-image: url('/assets/images/cyberpunk-city.jpg'); */
-    /* filter: blur(8px);
-    -webkit-filter: blur(8px); */
-      /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    /* background-repeat: no-repeat; */
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    min-height: 100%;
+.bgContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  filter: blur(8px);
+  transform: translateZ(-1px);
+}
+
+.bgImage {
+  background-image: url('/assets/images/cyberpunk-city.jpg');
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: translateY(var(--parallax-y, 0));
 }
