--- a/src/components/UI/Text.module.css
+++ b/src/components/UI/Text.module.css
@@ -14,8 +14,10 @@
 }
 
 .container p {
-    font-size: 0.5em;
-    font-weight: normal;
+    font-size: 0.3em;
+    font-weight: 400;
+    padding-bottom: 0.35em;
+    padding-left: 0.15em;
 }
 
 .foreground {
