--- a/src/components/UI/Background.module.css
+++ b/src/components/UI/Background.module.css
@@ -7,12 +7,14 @@
   overflow: hidden;
   z-index: -1;
   filter: blur(8px);
+  will-change: filter;
   transform: translateZ(-3px);
 }
 
 .bgImage {
   background-image: url('/assets/images/cyberpunk-city.jpg');
-  background-position: calc(var(--parallax-y, 0) / -3) calc(var(--parallax-y, 0) / 2);
+  background-position: calc(var(--parallax-y, 1) / -3) calc(var(--parallax-y, 0) / 2);
+  background-size: 215%;
   position: absolute;
   top: 0;
   left: 0;
