--- a/src/components/UI/Screen.module.css
+++ b/src/components/UI/Screen.module.css
@@ -1,7 +1,9 @@
 .container {
     position: fixed;
-    height: 100%;
-    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 2;
     display: flex;
     flex-grow: 1;
